Changed form.html to contact.html

--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,13 @@
-
+#!/usr/local/php5/bin/php-cgi
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Gallery | Beach Launch Team</title>
-
+        <title>Contact | Beach Launch Team</title>
+    
+       <link rel="stylesheet" href="css/style.css"> 
        <link rel="stylesheet" href="form.css">
     </head>
     <body>
@@ -28,7 +29,7 @@
 				    E-mail: <input type="text" name="email" value=""> <br>
 				    Questions: <textarea name="comment" rows="5" cols="40"></textarea>
 				    <input type="submit" name="submit" value="Submit">
-			  </form>
+			    </form>
             </main>
             <footer>
                 <p>Latest Update: <em><!--#echo var="LAST_MODIFIED"--></em> </p>
