--- a/index.html
+++ b/index.html
@@ -10,34 +10,25 @@
        <link rel="stylesheet" href="css/menu.css">
     </head>
     
-    <nav role="navigation">
-        <div id="menuToggle">
-            <input type="checkbox"/>
-            <span></span>
-            <span></span>
-            <span></span>
-        <ul id="menu">
-          <a href="#"><li>Home</li></a>
-          <a href="#"><li>About Us</li></a>
-          <a href="#"><li>Info</li></a>
-          <a href="#"><li>Contact</li></a>
-        </ul>   
-        </div>
-    </nav>
-    
     <body>
         <div class = "bg"></div>
         <div class="container">
             <header>
+                    <nav role="navigation">
+                            <div id="menuToggle">
+                                <input type="checkbox"/>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            <ul id="menu">
+                              <a href="#"><li>Home</li></a>
+                              <a href="#"><li>About Us</li></a>
+                              <a href="#"><li>Info</li></a>
+                              <a href="contact.html"><li>Contact</li></a>
+                            </ul>   
+                            </div>
+                        </nav>
             </header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="team.php">Team Members</a></li>
-                    <li><a href="contact.php">Contact Us</a></li>
-                </ul>
-            </nav>
 
             <main>
                 <div id="features-list">
