--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
             <main>
                 
             </main>
-            git branch -r | grep -v '\->' | while read remote; do git branch --track "${remote#origin/}" "$remote"; done
+            <footer>
+                <p>Latest Update: <em><!--#echo var="LAST_MODIFIED"--></em> </p>
+                <p>Students: <em>Juan David Lopez:<span>013101593</span></em></p>
+            </footer>
         </div>
     </body>
 </html>
