Added Launch History and began to style it

--- a/index.html
+++ b/index.html
@@ -50,6 +50,35 @@
                     </div>
                     
                 </div>
+
+                <div class="launch-history">
+                    <div class="vertical-line"></div>
+
+                    <div class="history-item">
+                        <span class="bullet">&#149;</span>
+                        <span class="date">1999</span>
+
+                    </div>
+                    <div class="history-item">
+                        <span class="bullet">&#149;</span>
+                        <span class="date">2001</span>
+                    </div>
+
+                    <div class="history-item">
+                        <span class="bullet">&#149;</span>
+                        <span class="date">2001</span>
+                    </div>
+
+                    <div class="history-item">
+                        <span class="bullet">&#149;</span>
+                        <span class="date">2001</span>
+                    </div>
+                    <div class="history-item">
+                        <span class="bullet">&#149;</span>
+                        <span class="date">2001</span>
+                    </div>
+
+                </div>
             </main>
             <footer>
                 <p>Latest Update: <em><!--#echo var="LAST_MODIFIED"--></em> </p>
