Changes to Home page
Changes menu background style, dynamic text

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
         <ul id="menu">
           <a href="#"><li>Home</li></a>
           <a href="#"><li>About Us</li></a>
-          <a href="#"><li>Info</li></a>
+          <a href="#"><li>Information</li></a>
           <a href="#"><li>Contact</li></a>
         </ul>   
         </div>
     </nav>
     
     <body>
-        <div class = "bg"></div>
+        <div class="bg"></div>
+        <div class="splashFont">
+        Beach Launch Team
+        </div>
             <footer>
                 <p>Latest Update: <em><!--#echo var="LAST_MODIFIED"--></em> </p>
             </footer>
