--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>Home | Beach Launch Team</title>
-        <link rel="stylesheet" href="css/style.css"> 
+        <link rel="stylesheet" href="css/home.css"> 
         <link rel="stylesheet" href="css/menu.css">
     </head>
     
@@ -14,10 +14,12 @@
             <span></span>
             <span></span>
             <span></span>
+            
         <ul id="menu">
-          <a href="#"><li>Home</li></a>
+          <a href="index.html"><li>Home</li></a>
           <a href="#"><li>About Us</li></a>
           <a href="#"><li>Information</li></a>
+          <a href="team.php"><li>The Team</li></a>
           <a href="#"><li>Contact</li></a>
         </ul>   
         </div>
