Added Generic 5 Media Queries
Added 5 media queries that adjust according to certain screen sizes.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <nav role="navigation">
         <div id="menuToggle">
             <input type="checkbox"/>
+<!--            Needed for accessibility-->
+            <label for = "menubar" hidden>Menu</label>
             <span></span>
             <span></span>
             <span></span>
