Made some corrections to the timeline on the home page and added learn more CTA buttons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <main>
                 <div id="features-list">
                     <h2>Our Mission</h2>
-                    
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non volutpat risus, vel posuere orci. Vivamus pharetra maximus justo. Morbi sodales purus a ligula iaculis ultricies. Nunc at sodales dui, sed sodales lacus.</p>
+
                     <div class="feature">
                         <img alt="" src="https://source.unsplash.com/random/100x100" height="" width=""/>
                         <p>Dignissimos ex quae quia. Hic vitae exercitationem consequatur sapiente odit sed ducimus eligendi.</p>
@@ -48,35 +49,49 @@
                         <img alt="" src="https://source.unsplash.com/random/100x100" height="" width=""/>
                         <p>Error qui dolore earum facilis mollitia animi rerum minus. Distinctio et illo tenetur cumque enim ea est.</p>
                     </div>
+
+                    <a href="#"><span class="button">Learn More</span></a>
                     
                 </div>
 
-                <div class="launch-history">
+                <div class="launch-history clearfix">
+                    <br>
+                    <h2>History</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non volutpat risus, vel posuere orci. Vivamus pharetra maximus justo. Morbi sodales purus a ligula iaculis ultricies. Nunc at sodales dui, sed sodales lacus.</p>
+
                     <div class="vertical-line"></div>
 
+                    <span class="bullet">&#149;</span>
                     <div class="history-item">
-                        <span class="bullet">&#149;</span>
                         <span class="date">1999</span>
-
-                    </div>
-                    <div class="history-item">
-                        <span class="bullet">&#149;</span>
-                        <span class="date">2001</span>
+                        <p>This is a paragraph of text describing the event. I will come back and put real information here, I promise.</p>
                     </div>
 
+                    <span class="bullet">&#149;</span>
                     <div class="history-item">
-                        <span class="bullet">&#149;</span>
-                        <span class="date">2001</span>
+                        <span class="date">1999</span>
+                        <p>This is a paragraph of text describing the event. I will come back and put real information here, I promise.</p>
                     </div>
 
+                    <span class="bullet">&#149;</span>
                     <div class="history-item">
-                        <span class="bullet">&#149;</span>
-                        <span class="date">2001</span>
+                        <span class="date">1999</span>
+                        <p>This is a paragraph of text describing the event. I will come back and put real information here, I promise.</p>
                     </div>
+
+                    <span class="bullet">&#149;</span>
                     <div class="history-item">
-                        <span class="bullet">&#149;</span>
-                        <span class="date">2001</span>
+                        <span class="date">1999</span>
+                        <p>This is a paragraph of text describing the event. I will come back and put real information here, I promise.</p>
                     </div>
+
+                    <span class="bullet">&#149;</span>
+                    <div class="history-item">
+                        <span class="date">1999</span>
+                        <p>This is a paragraph of text describing the event. I will come back and put real information here, I promise.</p>
+                    </div>
+
+                    <a href="#"><span class="button">Learn More</span></a>
 
                 </div>
             </main>
