Added some refinements to the homepage

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     
     <body>
         <div class = "bg"></div>
+        <div class="splashTextContainer">
+            <span class="splashFont">BEACH<br>LAUNCH</span>
+            <br>
+            <span class="subTitle">The best launch team ever.</span>
+        </div>
+
+
         <div class="container">
             <header>
                     <nav role="navigation">
@@ -32,7 +39,7 @@
 
             <main>
                 <div id="features-list">
-                    <h2>Our Mission</h2>
+                    <h2>We are the Beach Launch Team</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non volutpat risus, vel posuere orci. Vivamus pharetra maximus justo. Morbi sodales purus a ligula iaculis ultricies. Nunc at sodales dui, sed sodales lacus.</p>
 
                     <div class="feature">
@@ -91,9 +98,10 @@
                         <p>This is a paragraph of text describing the event. I will come back and put real information here, I promise.</p>
                     </div>
 
-                    <a href="#"><span class="button">Learn More</span></a>
-
                 </div>
+                <h2>You can help us reach the next milestone!</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non volutpat risus, vel posuere orci. Vivamus pharetra maximus justo. Morbi sodales purus a ligula iaculis ultricies. Nunc at sodales dui, sed sodales lacus.</p>
+                <a href="#"><span class="button">Donate Today</span></a>
             </main>
             <footer>
                 <p>Latest Update: <em><!--#echo var="LAST_MODIFIED"--></em> </p>
