Made some tweaks and changes including updating the history area on home page and the links in the nav bar. Also changed the contact page to mesh with theme

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
     
     <body>
+
         <div class = "bg"></div>
         <div class="splashTextContainer">
             <span class="splashFont">BEACH<br>LAUNCH</span>
@@ -19,7 +20,7 @@
         </div>
 
 
-        <div class="container">
+
             <header>
                     <nav role="navigation">
                             <div id="menuToggle">
@@ -30,12 +31,14 @@
                             <ul id="menu">
                               <a href="#"><li>Home</li></a>
                               <a href="#"><li>About Us</li></a>
-                              <a href="#"><li>Info</li></a>
-                              <a href="contact.html"><li>Contact</li></a>
+                              <a href="#"><li>Donations</li></a>
+                              <a href="team.html"><li>Team</li></a>
+                              <a href="contactus.php"><li>Contact</li></a>
                             </ul>   
                             </div>
                         </nav>
             </header>
+        <div class="container">
 
             <main>
                 <div id="features-list">
@@ -66,7 +69,7 @@
                     <h2>History</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non volutpat risus, vel posuere orci. Vivamus pharetra maximus justo. Morbi sodales purus a ligula iaculis ultricies. Nunc at sodales dui, sed sodales lacus.</p>
 
-                    <div class="vertical-line"></div>
+
 
                     <span class="bullet">&#149;</span>
                     <div class="history-item">
@@ -112,5 +115,6 @@
                 <p><em>Aman Mehta:<span>013340442</span></em></p>
                 <p><em>Juan David Lopez:<span>013101593</span></em></p>
             </footer>
+        </div>
     </body>
 </html>
