--- a/team.html
+++ b/team.html
@@ -22,10 +22,11 @@
                                 <span></span>
                                 <span></span>
                             <ul id="menu">
-                              <a href="#"><li>Home</li></a>
+                              <a href="index.html"><li>Home</li></a>
                               <a href="#"><li>About Us</li></a>
-                              <a href="#"><li>Info</li></a>
-                              <a href="contact.html"><li>Contact</li></a>
+                                <a href="team.html"><li>Donations</li></a>
+                              <a href="team.html"><li>Team</li></a>
+                              <a href="contactus.php"><li>Contact</li></a>
                             </ul>   
                             </div>
                         </nav>
@@ -51,7 +52,7 @@
                     </div>
                     <p>Hello</p>
                 </div> -->
-                <section class="meet-the-team">
+                <section class="meet-the-team container">
                     <h1>Meet the Team</h1>
                     <div class="member-profile">
                         <i class="fas fa-user-circle avatar-icon"></i>
