Updated the team page to include about us

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
             <br>
             <span class="subTitle">The best launch team ever.</span>
         </div>
-
-
-
+        
             <header>
                     <nav role="navigation">
                             <div id="menuToggle">
@@ -69,8 +67,6 @@
                     <h2>History</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non volutpat risus, vel posuere orci. Vivamus pharetra maximus justo. Morbi sodales purus a ligula iaculis ultricies. Nunc at sodales dui, sed sodales lacus.</p>
 
-
-
                     <span class="bullet">&#149;</span>
                     <div class="history-item">
                         <span class="date">1999</span>
@@ -111,7 +107,7 @@
                 <p>Web Developers:</p> 
                 <p><em>Isaac Chavez:<span>013756039</span></em></p>
                 <p><em>Ahmed Hamed:<span>013340442</span></em></p>
-                <p><em>Raviraj Mehta:<span>013340442</span></em></p>
+                <p><em>Raviraj Mane:<span>013340442</span></em></p>
                 <p><em>Aman Mehta:<span>013340442</span></em></p>
                 <p><em>Juan David Lopez:<span>013101593</span></em></p>
             </footer>
