--- a/team.html
+++ b/team.html
@@ -8,6 +8,7 @@
        <link rel="stylesheet" href="css/style.css">
        <link rel="stylesheet" href="css/home-styles.css">
        <link rel="stylesheet" href="css/menu.css">
+        <link rel="stylesheet" href="css/team.css">
        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
     </head>
 
@@ -29,7 +30,7 @@
                             <ul id="menu">
                               <a href="index.html"><li>Home</li></a>
                               <a href="#"><li>About Us</li></a>
-                                <a href="team.html"><li>Donations</li></a>
+                              <a href="team.html"><li>Donations</li></a>
                               <a href="team.html"><li>Team</li></a>
                               <a href="contactus.php"><li>Contact</li></a>
                             </ul>   
@@ -57,53 +58,68 @@
                     </div>
                     <p>Hello</p>
                 </div> -->
+                <div id = "about">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus</p>
+                </div>
+                <div id ="padTop">
                 <section class="meet-the-team container">
-                    <h1>Meet the Team</h1>
+                <div id = "pad">
+                    <h1>Club Officers</h1>
+                </div>
                     <div class="member-profile">
                         <i class="fas fa-user-circle avatar-icon"></i>
                         <h3>Cristian Acosta</h3>
                         <h4>Project Lead</h4>
+                        <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean m</h4>
                     </div>
 
                     <div class="member-profile">
                         <i class="fas fa-user-circle avatar-icon"></i>
                         <h3>Derek Honkawa</h3>
                         <h4>Assistant Lead</h4>
+                        <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean m</h4>
                     </div>
 
                     <div class="member-profile">
                         <i class="fas fa-user-circle avatar-icon"></i>
                         <h3>Joshua Jenson</h3>
                         <h4>Propulsion Engineer</h4>
+                        <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean m</h4>
                     </div>
 
                     <div class="member-profile">
                         <i class="fas fa-user-circle avatar-icon"></i>
                         <h3>Candyce Palsis</h3>
                         <h4>Relations Officer</h4>
+                        <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean m</h4>
                     </div>
 
                     <div class="member-profile avatar-icon">
                         <i class="fas fa-user-circle avatar-icon"></i>
                         <h3>Hunter Ly</h3>
                         <h4>Construction Leader</h4>
+                        <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean m</h4>
                     </div>
 
                     <div class="member-profile">
                         <i class="fas fa-user-circle avatar-icon"></i>
                         <h3>Angelica Luquin</h3>
                         <h4>Construction Leader</h4>
+                        <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean m</h4>
                     </div>
                 </section>
+                </div>
             </main>
             <footer>
                 <p>Latest Update: <em><!--#echo var="LAST_MODIFIED"--></em> </p>
                 <p>Web Developers:&emsp;</p>
                 <p><em>Isaac Chavez:&emsp;<span>013756039</span></em></p>
                 <p><em>Ahmed Hamed:&emsp;<span>013340442</span></em></p>
-                <p><em>Raviraj Mehta:&emsp;<span>013340442</span></em></p>
+                <p><em>Raviraj Mane:&emsp;<span>013340442</span></em></p>
                 <p><em>Aman Mehta:&emsp;<span>013340442</span></em></p>
                 <p><em>Juan David Lopez:&emsp;<span>013101593</span></em></p>
             </footer>
+        </div>
     </body>
 </html>
