--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
             <main>
                 <div id="features-list">
                     <h2>We are the Beach Launch Team</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non volutpat risus, vel posuere orci. Vivamus pharetra maximus justo. Morbi sodales purus a ligula iaculis ultricies. Nunc at sodales dui, sed sodales lacus.</p>
+                    <p>Beach Launch Team is a university student group at Cal State Long Beach dedicated to designing, building, testing, and launching liquid fuel rockets.</p>
 
                     <div class="feature">
-                        <img alt="" src="https://source.unsplash.com/random/100x100" height="" width=""/>
+                        <img alt="" src="image/rocket.svg" height="100" width="100"/>
                         <p>Dignissimos ex quae quia. Hic vitae exercitationem consequatur sapiente odit sed ducimus eligendi.</p>
                     </div>
 
                     <div class="feature">
-                        <img alt="" src="https://source.unsplash.com/random/100x100" height="" width=""/>
+                        <img alt="" src="image/settings.svg" height="100" width="100"/>
                         <p>Inventore reprehenderit quidem sit illum molestiae consequatur voluptatum rerum.</p>
                     </div>
 
                     <div class="feature">
-                        <img alt="" src="https://source.unsplash.com/random/100x100" height="" width=""/>
+                        <img alt="" src="image/flag.svg" height="100" width="100"/>
                         <p>Error qui dolore earum facilis mollitia animi rerum minus. Distinctio et illo tenetur cumque enim ea est.</p>
                     </div>
 
@@ -110,6 +110,7 @@
                 <p><em>Raviraj Mane:<span>013340442</span></em></p>
                 <p><em>Aman Mehta:<span>013340442</span></em></p>
                 <p><em>Juan David Lopez:<span>013101593</span></em></p>
+                <P>Credit Author <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div></P>
             </footer>
         </div>
     </body>
