--- a/team.html
+++ b/team.html
@@ -60,7 +60,7 @@
                 </div> -->
                 <div id = "about">
                     <h2>About Us</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus</p>
+                    <p>Beach Launch Team is a university student group at Cal State Long Beach dedicated to designing, building, testing, and launching liquid fuel rockets.</p>
                 </div>
                 <div id ="padTop">
                 <section class="meet-the-team container">
