Added a rel tag to the end of the modal video to take away the suggested videos.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <source src="https://www.youtube.com/watch?v=RMkQfmGB7-0" type="video/mp4">
                         Your browser does not support HTML video.        
                         </video> -->
-                        <iframe width="1020" height="630"; class="modal-video" src="https://www.youtube.com/embed/RMkQfmGB7-0" frameborder="0" allow="autoplay; encrypted-media" controls></iframe>
+                        <iframe width="1020" height="630"; class="modal-video" src="https://www.youtube.com/embed/RMkQfmGB7-0&rel=0" frameborder="0" allow="autoplay; encrypted-media" controls></iframe>
                         <p>Watch a video of our latest launch!</p>          
                     </div>
                 </section>
