Implemented a scroll to page content upon clicking the banner scroll arrow.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <br>
             <span class="subTitle">The best launch team ever.</span>
         </div>
+        <div class="banner-scroll-arrow" id="banner-scroll-arrow"></div>
 
         <div class="container">
             <header>
