--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="splashTextContainer">
             <span class="splashFont">BEACH<br>LAUNCH</span>
             <br>
-            <span class="subTitle">The best launch team ever.</span>
+            <h1 class="subTitle">The best launch team ever.</h1>
         </div>
         
             <header>
