--- a/gallery.html
+++ b/gallery.html
@@ -65,40 +65,27 @@ body {
 
 <!-- Photo Grid -->
 <div class="row"> 
-  <div class="column">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/mountainskies.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-  </div>  
-  <div class="column">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/mountainskies.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-  </div>
+      <div class="column">
+        <img src="image/img1.jpg" style="width:100%">
+        <img src="image/img2.jpg" style="width:100%">
+        <img src="image/img3.jpg" style="width:100%">
+        <img src="image/img4.JPG" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="image/img5.JPG" style="width:100%">
+        <img src="image/img6.JPG" style="width:100%">
+        <img src="image/img7.JPG" style="width:100%">
+        <img src="image/img8.JPG" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="image/img9.JPG" style="width:100%">
+        <img src="image/img10.jpg" style="width:100%">
+        <img src="image/img11.JPG" style="width:100%">
+      </div>
+    <div class="column">
+        <img src="image/img13.jpg" style="width:100%">
+        <img src="image/img12.jpg" style="width:100%">
+    </div>
 </div>
 
 </body>
