--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head>
+    <link rel="stylesheet" href="css/menu.css">
+    </head>
+    
 <style>
     
 * {
@@ -62,6 +66,25 @@ body {
 <div class="header">
   <h1>Gallery</h1>
 </div>
+
+    <header>
+        <nav role="navigation">
+            <div id="menuToggle">
+                <input type="checkbox"/>
+                <span></span>
+                <span></span>
+                <span></span>
+            <ul id="menu">
+                <a href="#"><li>Home</li></a>
+                <a href="#"><li>About Us</li></a>
+                <a href="#"><li>Donations</li></a>
+                <a href="team.html"><li>Team</li></a>
+                <a href="contactus.php"><li>Contact</li></a>
+                <a href="gallery.html"><li>Gallery</li></a>
+            </ul>   
+            </div>
+                </nav>
+            </header>
 
 <!-- Photo Grid -->
 <div class="row"> 
