--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
                                 <span></span>
                             <ul id="menu">
                               <a href="#"><li>Home</li></a>
-                              <a href="#"><li>About Us</li></a>
+                              <a href="team.php"><li>About Us</li></a>
                               <a href="#"><li>Donations</li></a>
-                              <a href="team.html"><li>Team</li></a>
                               <a href="contactus.php"><li>Contact</li></a>
                             </ul>   
                             </div>
