--- a/index.html
+++ b/index.html
@@ -120,45 +120,31 @@
         </a>
     </main>
     <footer>
-        <p>Latest Update:
+        <p>
             <em>
                 <!--#echo var="LAST_MODIFIED"-->
             </em>
         </p>
-        <p>Web Developers:</p>
-        <p>
-            <em>Isaac Chavez:
-                <span>013756039</span>
-            </em>
-        </p>
-        <p>
-            <em>Ahmed Hamed:
-                <span>013340442</span>
-            </em>
-        </p>
-        <p>
-            <em>Raviraj Mane:
-                <span>013340442</span>
-            </em>
-        </p>
-        <p>
-            <em>Aman Mehta:
-                <span>013340442</span>
-            </em>
-        </p>
-        <p>
-            <em>Juan David Lopez:
-                <span>013101593</span>
-            </em>
-        </p>
-        <P>Credit Author
-            <div>Icons made by
+        <h3>Web Developers</h3>
+
+           <span title="013756039">Isaac Chavez, </span>
+
+            <span title="013340442">Ahmed Hamed, </span>
+
+            <span title="013340442">Raviraj Mane, </span>
+
+            <span title="013340442">Aman Mehta, </span>
+
+            <span title="013101593">Juan David Lopez</span>
+
+        <h3>Attribution</h3>
+            <div>
                 <a href="http://www.freepik.com" title="Freepik">Freepik</a> from
                 <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
                 <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0"
                     target="_blank">CC 3.0 BY</a>
             </div>
-        </P>
+
     </footer>
     </div>
     <script src="js/logic.js" type="text/javascript"></script>
