Modularize css more. Fix buttons

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                 <p>Error qui dolore earum facilis mollitia animi rerum minus. Distinctio et illo tenetur cumque enim ea est.</p>
             </div>
 
-            <a href="#">
-                <span class="button">Learn More</span>
-            </a>
+
+            <button onclick="window.location.href='team.php'" class="button">Learn More</button>
+
 
         </div>
 
@@ -112,11 +112,11 @@
             </div>
 
         </div>
-        <h2>You can help us reach the next milestone!</h2>
+        <h2>Help us reach the next milestone!</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non volutpat risus, vel posuere orci. Vivamus pharetra
             maximus justo. Morbi sodales purus a ligula iaculis ultricies. Nunc at sodales dui, sed sodales lacus.</p>
         <a href="#">
-            <span class="button">Donate Today</span>
+            <button class="button">Donate Today</button>
         </a>
     </main>
     <footer>
@@ -127,15 +127,15 @@
         </p>
         <h3>Web Developers</h3>
 
-           <span title="013756039">Isaac Chavez, </span>
+           <span class="author" title="013756039">Isaac Chavez, </span>
 
-            <span title="013340442">Ahmed Hamed, </span>
+            <span class="author" title="013340442">Ahmed Hamed, </span>
 
-            <span title="013340442">Raviraj Mane, </span>
+            <span class="author" title="013340442">Raviraj Mane, </span>
 
-            <span title="013340442">Aman Mehta, </span>
+            <span class="author" title="013340442">Aman Mehta, </span>
 
-            <span title="013101593">Juan David Lopez</span>
+            <span class="author" title="013101593">Juan David Lopez</span>
 
         <h3>Attribution</h3>
             <div>
