Created a full span feature

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 
 
         </div>
+    </main>
+
+    <div style=" margin: 2em 0 2em 0; height: 50vh; background-color: #2E6359"></div>
+
+    <main>
 
         <div class="launch-history clearfix">
             <br>
