--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
             </header>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.php">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="team.php">Team Members</a></li>
                     <li><a href="contact.php">Contact Us</a></li>
