added index to menu
This is for the gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,7 @@ body {
                 <span></span>
                 <span></span>
             <ul id="menu">
-                <a href="#"><li>Home</li></a>
+                <a href="index.html"><li>Home</li></a>
                 <a href="#"><li>About Us</li></a>
                 <a href="#"><li>Donations</li></a>
                 <a href="team.html"><li>Team</li></a>
